--- a/src/app/pages/patients.component.html
+++ b/src/app/pages/patients.component.html
@@ -41,7 +41,19 @@
             font-size: 13px;
             cursor: pointer;
           ">👁 View</button>
-
+          <button [routerLink]="['/edit-patient', patient.id]" style="
+          background-color: #FFC107;
+          color: white;
+          border: none;
+          padding: 6px 12px;
+          border-radius: 4px;
+          margin-right: 6px;
+          font-size: 13px;
+          cursor: pointer;
+        ">
+        ✏️ Edit
+        </button>
+      
           <button (click)="deletePatient(patient.id)" style="
             background-color: #f44336;
             color: white;
