--- a/src/app/pages/edit-patient.component.html
+++ b/src/app/pages/edit-patient.component.html
@@ -9,6 +9,9 @@
     <div>
       <input type="text" formControlName="surname" placeholder="Surname" style="width: 100%; padding: 10px;"/>
     </div>
+    <div>
+      <input type="text" formControlName="comment" placeholder="comment" style="width: 100%; padding: 10px;"/>
+    </div>
 
     <div>
       <input type="date" formControlName="birthDate" placeholder="Birth Date" style="width: 100%; padding: 10px;"/>
