--- a/src/app/pages/patient-detail.component.html
+++ b/src/app/pages/patient-detail.component.html
@@ -3,6 +3,7 @@
 <div *ngIf="selectedPatient" style="margin: 40px auto; width: 50%; background: #f0f8ff; padding: 20px; border-radius: 10px;">
   <p><strong>Name:</strong> {{ selectedPatient.name }}</p>
   <p><strong>Surname:</strong> {{ selectedPatient.surname }}</p>
+  <p><strong>Comment:</strong> {{ selectedPatient.comment }}</p>
   <p><strong>Birth Date:</strong> {{ selectedPatient.birthDate }}</p>
 
   <div style="margin-top: 30px; padding: 20px; border-left: 5px solid #1976d2; background-color: #e3f2fd; border-radius: 10px;">
