--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -10,7 +10,7 @@
   box-shadow: 0 4px 12px rgba(0,0,0,0.05);
 ">
 
-  <h2 style="text-align:center; margin-bottom: 20px;">Giriş Yap</h2>
+  <h2 style="text-align:center; margin-bottom: 20px;">Sign in</h2>
 
   <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
 
@@ -33,7 +33,7 @@
       font-weight: 600;
       cursor: pointer;
     ">
-      Giriş Yap
+      Login
     </button>
 
   </form>
